# frb_plugins

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  analysis_options.yaml  mason-lock.json  mason.yaml  melos.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.github/: FUNDING.yml
.github/workflows/: publish-release.yml
.mason/: bricks.json
brick/: README.md  brick.yaml
brick/__brick__/{{name.snakeCase()}}/: Cargot.toml  README.md  ffigen.yaml  pubspec.yaml
brick/__brick__/{{name.snakeCase()}}/android/: CMakeLists.txt  build.gradle  settings.gradle
brick/__brick__/{{name.snakeCase()}}/example/: README.md  pubspec.yaml
brick/__brick__/{{name.snakeCase()}}/example/lib/: main.dart
brick/__brick__/{{name.snakeCase()}}/example/linux/: CMakeLists.txt  my_application.cc
brick/__brick__/{{name.snakeCase()}}/ios/: {{name.snakeCase()}}.podspec
brick/__brick__/{{name.snakeCase()}}/lib/: {{name.snakeCase()}}.dart
brick/__brick__/{{name.snakeCase()}}/linux/: CMakeLists.txt
brick/__brick__/{{name.snakeCase()}}/macos/: {{name.snakeCase()}}.podspec
brick/__brick__/{{name.snakeCase()}}/native/: Cargo.toml  build.rs
brick/__brick__/{{name.snakeCase()}}/src/: CMakeLists.txt  {{name.snakeCase()}}.c
brick/__brick__/{{name.snakeCase()}}/test/: {{name.snakeCase()}}_test.dart
brick/__brick__/{{name.snakeCase()}}/windows/: CMakeLists.txt
cli/: main.dart
cli/commands/: android.dart  ios.dart  linux.dart  macos.dart  project_name.dart  version.dart  windows.dart
cli/mixins/: config.dart
(+21 files in other folders)
